syntax = "proto3";
package idas.client.oauth2;
import public "gogoproto/gogo.proto";
option go_package = "github.com/MicroOps-cn/idas/pkg/client/oauth2;oauth2";
option (gogoproto.sizer_all) = true;

message Option{
  string name = 1[(gogoproto.moretags)='valid:"required"'];
  string icon = 2;
  string token_url = 3[(gogoproto.moretags)='valid:"required,url"'];
  string auth_url = 4[(gogoproto.moretags)='valid:"required,url"'];
  string api_url = 5[(gogoproto.moretags)='valid:"required,url"'];
  string client_id = 6[(gogoproto.moretags)='valid:"required"'];
  string client_secret = 7[(gogoproto.moretags)='valid:"required"'];
  bool AutoLogin = 8;
  string id = 9[(gogoproto.moretags)='valid:"required"'];
}